After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764001 - Depends on gnome-shell for org.gnome.shell.calendar
Depends on gnome-shell for org.gnome.shell.calendar
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.19.x
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on: 766316 766318 766319
Blocks:
 
 
Reported: 2016-03-21 18:06 UTC by Iain Lane
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
year-view: Use the new schema from gsettings-desktop-schemas (2.11 KB, patch)
2016-05-12 11:10 UTC, Iain Lane
none Details | Review
year-view: Use the new schema from gsettings-desktop-schemas (3.04 KB, patch)
2016-05-12 11:29 UTC, Iain Lane
committed Details | Review

Description Iain Lane 2016-03-21 18:06:54 UTC
Since 32c5c824e326759af0766b011b02f354889a7b6c, gnome-calendar now depends on having this schema installed. For Ubuntu we have Unity instead of Shell, and so we don't have it.

Would you accept a patch to make this conditional (and assume FALSE if it's not there, presumably)?

Another option would be to move this schema out to gsettings-desktop-schemas or something, but I'm not familiar with that project to know if that is appropriate. I guess that an org.gnome.shell schema wouldn't be wanted there, so we'd have to migrate to a new name.
Comment 1 Georges Basile Stavracas Neto 2016-03-26 20:52:16 UTC
It'd be nice if we could move this setting to the default desktop-schemas repository, so we don't have to check for the environment.

If that doesn't happen, I'm cautiously positive in accepting a patch that checks if the desktop environment is GNOME.
Comment 2 Iain Lane 2016-03-29 20:39:41 UTC
You'd rather that than making it a soft depends - i.e. checking if the schema is installed and doing something sensible if not?

That's sort of the same as checking if you're in GNOME using XDG_CURRENT_DESKTOP or similar, but feels a bit more graceful to me.

Will check about g-d-s first. (but not for a couple of weeks - on holiday atm; cheers!)
Comment 3 Vadim Rutkovsky 2016-04-09 15:47:46 UTC
This also breaks running Calendar from xdg-app - due to the missing schema latest master crashes with:
'(gnome-calendar:2): GLib-GIO-ERROR **: Settings schema 'org.gnome.shell.calendar' is not installed'
Comment 4 Matthias Clasen 2016-04-10 15:41:46 UTC
I would say that it is a bug for applications to use schemas that are not a) their own or b) part of gsettings-desktop-schemas. 

If you want a desktop wide setting for this, that requires patches for gsettings-desktop-schemas and gnome-shell *before* using it in your app.
Comment 5 Alexander Larsson 2016-04-15 10:51:15 UTC
This is also breaking the 3.20 stable xdg-app of gnome-calendar.
Comment 6 Iain Lane 2016-05-12 11:10:21 UTC
Created attachment 327692 [details] [review]
year-view: Use the new schema from gsettings-desktop-schemas

So that we don't have to depend on GNOME shell.

--

Here's the patch to use gsettings-desktop-schemas schema for your
consideration.

I don't know how to best depend on the gsettings-desktop-schemas version. Is it
just implicit?

The depdendent bugs need to be fixed before this one.
Comment 7 Bastien Nocera 2016-05-12 11:13:56 UTC
(In reply to Iain Lane from comment #6)
> I don't know how to best depend on the gsettings-desktop-schemas version. Is
> it
> just implicit?

It's not. gsettings-desktop-schemas has a pkg-config file.
Comment 8 Iain Lane 2016-05-12 11:17:21 UTC
(In reply to Bastien Nocera from comment #7)
> (In reply to Iain Lane from comment #6)
> > I don't know how to best depend on the gsettings-desktop-schemas version. Is
> > it
> > just implicit?
> 
> It's not. gsettings-desktop-schemas has a pkg-config file.

Yep. That's build-time only, but the best we can do I suppose.
Comment 9 Bastien Nocera 2016-05-12 11:27:59 UTC
(In reply to Iain Lane from comment #8)
> (In reply to Bastien Nocera from comment #7)
> > (In reply to Iain Lane from comment #6)
> > > I don't know how to best depend on the gsettings-desktop-schemas version. Is
> > > it
> > > just implicit?
> > 
> > It's not. gsettings-desktop-schemas has a pkg-config file.
> 
> Yep. That's build-time only, but the best we can do I suppose.

The application will assert when it's not installed. A simple sanity check would cover that.
Comment 10 Iain Lane 2016-05-12 11:29:42 UTC
Created attachment 327694 [details] [review]
year-view: Use the new schema from gsettings-desktop-schemas

So that we don't have to depend on GNOME shell.
Comment 11 Georges Basile Stavracas Neto 2016-05-12 12:07:49 UTC
Review of attachment 327694 [details] [review]:

LGTM. I'll apply and push this patch once GNOME Settings Daemon lands the new setting. Thanks for working on that!
Comment 12 Bastien Nocera 2016-05-12 12:13:22 UTC
(In reply to Georges Basile Stavracas Neto from comment #11)
> Review of attachment 327694 [details] [review] [review]:
> 
> LGTM. I'll apply and push this patch once GNOME Settings Daemon lands the
> new setting. Thanks for working on that!

There's no settings in gnome-settings-daemon.
Comment 13 Georges Basile Stavracas Neto 2016-05-12 12:15:45 UTC
(In reply to Bastien Nocera from comment #12)
> There's no settings in gnome-settings-daemon.

Ops! I meant to say gsettings-desktop-schemas.
Comment 14 Georges Basile Stavracas Neto 2016-05-31 17:27:07 UTC
Thanks everyone who was involved in this, specially Iain.

Attachment 327694 [details] pushed as 9b358eb - year-view: Use the new schema from gsettings-desktop-schemas