year-view: Use the new schema from gsettings-desktop-schemas

So that we don't have to depend on GNOME shell.

https://bugzilla.gnome.org/show_bug.cgi?id=764001